<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/option1"
        android:icon="@drawable/datos_corporales"
        android:title="@string/menu_dcorporales" />

    <item
        android:id="@+id/option2"
        android:icon="@drawable/datos_personales"
        android:title="@string/menu_dpersonales" />

    <item
        android:id="@+id/option3"
        android:icon="@drawable/nutricional"
        android:title="@string/menu_nutricional" />

    <item
        android:id="@+id/option4"
        android:icon="@drawable/recomendaciones"
        android:title="@string/menu_recc"/>

    <item
        android:id="@+id/option5"
        android:icon="@drawable/historial"
        android:title="@string/menu_historial" />

    <item
        android:id="@+id/option6"
        android:icon="@drawable/logout"
        android:title="@string/menu_logout" />
</menu>