<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:gravity="center">

    <LinearLayout
        android:layout_width="300dp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/persona" />

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:textColor="@color/main_title"
            android:text="@string/register_title" />

        <EditText
            android:id="@+id/txbUser"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/register_user" />

        <EditText
            android:id="@+id/txbPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/register_password" />

        <EditText
            android:id="@+id/txbPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/register_password2" />

        <EditText
            android:id="@+id/txbNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/register_nombre" />

        <EditText
            android:id="@+id/txbaPaterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/register_aPaterno" />

        <EditText
            android:id="@+id/txbAmaterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/register_aMaterno" />

        <EditText
            android:id="@+id/txbafechaNac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/register_fecNac" />

        <Spinner
            android:id="@+id/SpnGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/register_genero"
            android:layout_marginTop="5dp"

            />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btnSecundario"
            android:textColor="#FFF"
            android:layout_marginTop="20dp"
            android:text="@string/login_register" />


    </LinearLayout>




</LinearLayout>